fix spacing in buildpizza

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@
     text-align: center;
     color:limegreen;
     font-weight: bolder;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 25px;
 }
 #container2 p{
@@ -104,7 +104,8 @@
     align-items: center;
 }
 .cartRef button:hover{
-    opacity: .8
+    background-color: yellowgreen;
+    color:black;
 }
 .card:hover{
     transform: scale(1.1);
@@ -124,25 +125,35 @@
 #containerBuild{
     background-color: yellowgreen;
     margin-bottom: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
     border:3px solid black;
+    font-size: 20px;
 }
 #containerBuild h2{
     text-align: center;
+    font-size: 26px;
 }
 .step1 ul{
     text-align: center;
     list-style-type: none;
     align-items: center;
+    font-weight: bold;
+    font-size: 21px;
 }
-#title3{
+h2#title3{
     color:white;
     text-align: center;
     padding-top:45px;
     padding-bottom: 30px;
     font-size: 35px;
 }
-.step4{
-    align-items: center;
+.step4 h4{
+    color: darkgreen;
+    margin-top:15px;
 }
+.step2,
+.step3{
+    padding-left: 40px;
+}
+
 /* Build your pizza ends */
